<resources>
    <string name="app_name">Bogotravel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="USAQUÉN">USAQUÉN</string>
    <string name="descripcion">Fue escenario de amplias haciendas, hoy convertidas en urbanizaciones y centros comerciales. Usaquén está ubicada al norte de Bogotá y es un popular paraje para descubrir la ciudad. Modernos bistrós, acogedoras cafeterías, coctelerías y cervecerías se agrupan allí. Los domingos, podrás visitar el mercado de pulgas de Usaquén, disfruta de música al aire libre, espectáculos de marionetas, puestos de comida gourmet y artículos como joyas, artesanías y varias muestras de café local.</string>
    <string name="planes">PLANES</string>
    <string name="temperatura">Temperatura: 18ºC</string>
    <string name="foto">foto</string>
    <string name="nombre_poi">nombre_poi</string>
    <string name="descripcorta">Usaquén está ubicada al norte de Bogotá y es un popular paraje para descubrir la ciudad.</string>
    <string name="valoracion">*****</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="title_activity_bottom">activity_bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_detail">title_detail</string>
    <string name="title_list">title_list</string>
    <string name="usaquenfoto">usaquenfoto</string>
    <string name="SitioTurístico">Sitio Turistico</string>
    <string name="splashapp">splashapp</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>